crates/oxc_css_parser/tests/error/scss/value/interpolation/semicolon.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `}`, but found `;`
  ┌─ semicolon.scss:1:14
  │
1 │ $foo: #{bar();};
  │              ^


